fix image filename typo

--- a/site/study1.html
+++ b/site/study1.html
@@ -159,17 +159,17 @@
 
 <!-- preload -->
 <div style="width:0;height:0;overflow:hidden">
-   <img src="images/EXP1_DFT_00.JPG" />
-   <img src="images/EXP1_DFT_10.JPG" />
-   <img src="images/EXP1_DFT_20.JPG" />
-   <img src="images/EXP1_DFT_30.JPG" />
-   <img src="images/EXP1_DFT_40.JPG" />
-   <img src="images/EXP1_DFT_50.JPG" />
-   <img src="images/EXP1_DFT_60.JPG" />
-   <img src="images/EXP1_DFT_70.JPG" />
-   <img src="images/EXP1_DFT_80.JPG" />
-   <img src="images/EXP1_DFT_90.JPG" />
-   <img src="images/EXP1_DFT_100.JPG" />
+   <img src="images/EXP1_DFT_00.jpg" />
+   <img src="images/EXP1_DFT_10.jpg" />
+   <img src="images/EXP1_DFT_20.jpg" />
+   <img src="images/EXP1_DFT_30.jpg" />
+   <img src="images/EXP1_DFT_40.jpg" />
+   <img src="images/EXP1_DFT_50.jpg" />
+   <img src="images/EXP1_DFT_60.jpg" />
+   <img src="images/EXP1_DFT_70.jpg" />
+   <img src="images/EXP1_DFT_80.jpg" />
+   <img src="images/EXP1_DFT_90.jpg" />
+   <img src="images/EXP1_DFT_100.jpg" />
 </div>
 
 </body>
