--- a/site/study1.html
+++ b/site/study1.html
@@ -77,19 +77,10 @@
 <div class="slide" id="stage">
   
 <div class="progress">
+    <div id="prog" class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:0%"></div>
+</div>
+<br>
   
-<!-- The "style="width:X%"> is where you change the amount the bar is filled by replacing X with the % filled.  -->
-
-    <div id="prog" class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:0%">
-
-
-    </div>
-
-  </div>
-  <br>
-  
-  <!-- Trying out table below. Maybe color for prompt? -->
-  <!-- Questionnaire slide 1- agree/disagree -->
 <div align="center">
   <h5><b>This woman is ...</b></h5><br>
 </div>
@@ -218,9 +209,6 @@
    </div>
   
   <div align="center">
-  <!--
-    <button type="submit" id="debriefsubmit" onClick="experiment.submit_comments()">Submit</button>
-    -->
     <button type="submit" id="debriefsubmit">Submit</button>
   </div>
   </form>
