add an artificial delay between faces

--- a/site/study1.html
+++ b/site/study1.html
@@ -81,6 +81,7 @@
 </div>
 <br>
   
+<div id="stage-content">
 <div align="center">
   <h5><b>This woman is ...</b></h5><br>
 </div>
@@ -124,6 +125,7 @@
 
  </table>
  </div>
+</div>
 
  <!-- The debriefing slide. -->
  <form id="demographics">
