Add debrief text

--- a/site/study1.html
+++ b/site/study1.html
@@ -218,7 +218,16 @@
   
 <!-- The finish slide. -->
 <div class="slide" id="finished">
-  You're finished - thanks for participating! Submitting to Mechanical Turk...
+  <p class="block-text">
+  Thank you for participating in the study replicating "What is Typical is
+  Good: The Influence of Face Typicality on Perceived Trustworthiness"! The
+  purpose of the study is to understand how faces that look more typical
+  affects our perception of their trustworthiness. In this study, we asked
+  participants to rate how trustworthy or attractive they judged the faces to
+  be. We expect to find that typical faces are judged to be more trustworthy
+  than attractive faces. If you would like to learn more about this topic we
+  can provide some references.
+  </p>
 </div>
 
 <script src="study1.js"></script>
